2017-12-05  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FApplication::processMouseEvent

2017-12-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FListBox::drawList and FListBox::onKeyPress
	* Refactoring FWidget::event

2017-12-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FApplication::linuxModifierKeyCorrection and
	  FVTerm::updateVTerm
	* Fix getLinuxModifierKey() subcode value as non-const

2017-11-30  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FVTerm::updateTerminalLine

2017-11-26  Markus Gans  <guru.mail@muenster.de>
	* Better code readability by splitting FOptiMove::moveCursor 
	  into sub-functions
	* Improved alignment of the code by changing the indentation 
	  in Boolean expressions

2017-11-25  Markus Gans  <guru.mail@muenster.de>
	* Splitting quirks in serperate methods

2017-11-24  Markus Gans  <guru.mail@muenster.de>
	* Detects Linux console font with 512 characters and 
	  reduces the number of colors to 8
	* Color palette defined for 8 colors

2017-11-23  Markus Gans  <guru.mail@muenster.de>
	* Remove duplicated code from FOptiAttr::changeAttribute

2017-11-22  Markus Gans  <guru.mail@muenster.de>
	* Remove duplicated code in FVTerm::print

2017-11-19  Markus Gans  <guru.mail@muenster.de>
	* Splitting the FString example into sub-functions to make 
	  the code more comprehensible

2017-11-18  Markus Gans  <guru.mail@muenster.de>
	* Improved command line paramenter handling
	* New command line paramenter --no-terminal-detection
	* New command line paramenter --no-color-change
	* Splitting init_termcaps() into multiple submethods

2017-11-11  Markus Gans  <guru.mail@muenster.de>
	* Improved code coverage tests

2017-11-08  Markus Gans  <guru.mail@muenster.de>
	* Simulate invisible characters on terminals that do not 
	  support this attribute

2017-11-04  Markus Gans  <guru.mail@muenster.de>
	* Version 0.4.0
	* Change license from GPL v3 to LGPL v3

2017-11-03  Markus Gans  <guru.mail@muenster.de>